# MicroscopyStructurePropertyBenchmark-Surya

./: .gitignore  README.md  pyproject.toml
configs/: stem_all_methods.yaml  stem_all_methods_bulk.yaml  stem_all_methods_composition.yaml  stem_all_methods_dipole.yaml  stem_all_methods_edge.yaml  stem_all_methods_peak_intensity.yaml
docs/: stem_dummy_data.md
src/MicroscopyStructurePropertyBenchmark/: __init__.py  cli.py  rewards.py  sweep_cli.py
src/MicroscopyStructurePropertyBenchmark/acquisition/: __init__.py  beacon.py  expected_improvement.py  random.py  upper_confidence_bound.py
src/MicroscopyStructurePropertyBenchmark/datasets/: __init__.py  stem_h5.py  synthetic.py
src/MicroscopyStructurePropertyBenchmark/io/: __init__.py  outputs.py
src/MicroscopyStructurePropertyBenchmark/metrics/: __init__.py  coverage.py  regression.py
src/MicroscopyStructurePropertyBenchmark/models/: __init__.py  dkl.py  gpytorch_gp.py
src/MicroscopyStructurePropertyBenchmark/representations/: __init__.py  pca.py
src/MicroscopyStructurePropertyBenchmark/runners/: __init__.py  active_learning.py  sweep.py
tests/: test_smoke.py
