[project]
name = "MicroscopyStructurePropertyBenchmark"
version = "0.1.0"
description = "Benchmark datasets and baselines for learning structure-property relationships from microscopy data."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Utkarsh Pratiush" }
]

dependencies = [
  "numpy>=1.24",
  "pyyaml>=6.0",
  "scikit-learn>=1.3",
  "torch>=2.0",
  "gpytorch>=1.11",
  "botorch>=0.12.0",
  "matplotlib>=3.7",
  "h5py>=3.16.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[project.scripts]
mspb = "MicroscopyStructurePropertyBenchmark.cli:main"
mspb-sweep = "MicroscopyStructurePropertyBenchmark.sweep_cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]